# reduced-c

./: .gitignore  .gitlab-ci.yml  .hgignore  ASSEMBLY.md  Cargo.toml  LANGUAGE.md  LICENSE  Makefile  README.md  grammar.txt  tsubst.awk
examples/: conditions.rcc  expressions.rcc  syntax-error.rcc  use-before-declared.rcc  while-counter.rcc
src/: instr.rs  lib.rs  main.rs  opt.rs  parser.rs  syntax.rs  trans.rs  validate.rs
src/syntax/: mod.rs  parser.rs
syntax/: Cargo.toml
syntax/src/: lib.rs  parser.rs
web/: cgi.html  cgi.js  index.html  purejs.html  purejs.js  template.html  worker.js
